--- a/frontend/src/assets/styles/components/_productCard.scss
+++ b/frontend/src/assets/styles/components/_productCard.scss
@@ -10,7 +10,7 @@
   flex-direction: column;
   padding: calc(var(--spacing-unit) * 1.5);
   transition: box-shadow var(--transition-default);
-  
+
   &:hover {
     box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.18);
   }
@@ -23,31 +23,30 @@
     margin-bottom: calc(var(--spacing-unit) * 0.5);
   }
   
-  &__info {
+  &__details {
     display: flex;
+    flex-direction: row;
     align-items: center;
-    justify-content: space-between; /* Product name and price on one row */
+    justify-content: space-between;
     width: 100%;
-    margin-bottom: calc(var(--spacing-unit) * 0.25); /* Reduced spacing */
+    font-size: 1.2rem;
+    margin-bottom: calc(var(--spacing-unit) * 0.25);
     
     &__title {
-      font-size: 1.2rem;
       color: var(--color-dark-primary);
       margin: 0;
     }
     
     &__price {
-      font-size: 1.2rem;
       color: var(--color-primary);
       font-weight: var(--font-weight-bold);
       margin: 0;
     }
   }
   
-  /* Details button, left-aligned */
   .details-button {
     display: block;
-    margin-top: calc(var(--spacing-unit) * 0.25); /* Less gap */
     text-align: left;
+    margin-top: calc(var(--spacing-unit) * 0.25);
   }
 }
